--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,10 @@
-eerste versi
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{{page.titel}} </title>
+  </head>
+  <body>
+    {{ content }}
+  </body>
+</html>
